--- a/src/app/heroes-detail/heroes-detail.component.html
+++ b/src/app/heroes-detail/heroes-detail.component.html
@@ -9,7 +9,7 @@
       <input [(ngModel)]="hero.name" placeholder="name">
     </label>
   </div>
-  <button (click)="goBack()">Back</button>
-  <button (click)="save()">Save</button>
-  <button (click)="deleteHero()">Delete</button>
+  <button (click)="goBack()"><i class="far fa-arrow-alt-circle-left"></i>Back</button>
+  <button (click)="save()"><i class="far fa-save"></i>Save</button>
+  <button (click)="deleteHero()"><i class="far fa-trash-alt"></i>Delete</button>
 </div>
