--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -11,7 +11,9 @@
       <input #heroName />
     </label>
     <!-- (click) passes input value to add() and then clears the input -->
+
     <button (click)="add(heroName.value); heroName.value=''">
+      <i class="far fa-save"></i>
       add
     </button>
   </div>
