--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="messageService.messages.length">
 	<h2>Mensajes</h2>
 	<button class="clear"
-					(click)="messageService.clear()">Limpiar</button>
+					(click)="messageService.clear()"><i class="fas fa-trash-alt"></i>Limpiar</button>
 	<div *ngFor="let message of messageService.messages"> {{message}}</div>
 </div>
