--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,15 @@
-<h3>Mejores héroes</h3>
-<div class="grid grid-pad">
-	<a *ngFor="let hero of heroes" class="col-1-4" routerLink="/detail/{{hero._id}}">
-		<div class="module hero">
-			<h4>{{hero.name}}</h4>
-		</div>
-	</a>
-</div>
+<h1>Mejores héroes</h1>
+<br/>
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col" *ngFor="let hero of heroes">
+      <a class="btn btn-primary" routerLink="/detail/{{hero._id}}">
+        <div class="hero">
+          <h4>{{hero.name}}</h4>
+        </div>
+      </a>
+    </div>
+    <div class="col">
+      <app-hero-search></app-hero-search>
+    </div>
+  </div>
